KFileModel: Let Sort dir first affect size sorting

BUG: 433207